# BigIntCpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.cpp  big_int.hpp  compile_commands.json  safe_factorial.cpp  safe_number.hpp  teste.cpp
.devcontainer/: devcontainer.json
benchmarks/: main.cpp
src/: safe_factorial.cpp
src/headers/: big_int.hpp  safe_number.hpp
tests/: tests_bigint.cpp
